[tool.poetry]
name = "Discord-Music-Bot"
version = "0.1.0"
description = ""
authors = ["Roy Khoury <roy_khoury12@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
discord = "^1.0.1"
youtube-dl = "^2021.6.6"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
